--- a/clone-app/src/App.css
+++ b/clone-app/src/App.css
@@ -1,42 +1,44 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.a1 {
+    display: flex;
+    align-items: center;
+    padding: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.span1 {
+    display: flex;
+    align-items: center;
+    font: bold;
+    text-decoration: none;
+    margin-left: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.container1 {
+    display: flex;
+    border-radius: 10px;
+    border: gray;
+    padding: 6px;
+    text-decoration:solid;
+    box-shadow: -5px 5px 10px;
 }
 
-.card {
-  padding: 2em;
+.border1, .border2 {
+    border-radius: 20px;
+    border: solid lightgray;
 }
 
-.read-the-docs {
-  color: #888;
+.padding1, .padding2, .padding3 {
+    padding: 3px;
+}
+
+/* this needs work on */
+.button1 {
+    color: #F5385D;
+    border-radius: 50%;
 }
