--- a/clone-app/src/index.css
+++ b/clone-app/src/index.css
@@ -2,5 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+input {
+    @apply w-full border my-2 py-2 px-3 rounded-2xl;
+}
 
+button {
+    @apply bg-gray-300;
+}
+
+button.primary {
+    background-color: '#F53850';
+    @apply bg-primary p-2 w-full text-white rounded-2xl;
+}
 
