--- a/clone-app/src/App.css
+++ b/clone-app/src/App.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 4px;
 }
 
 .a1 {
@@ -41,4 +40,37 @@
 .button1 {
     color: #F5385D;
     border-radius: 50%;
+}
+
+.layout {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.login-h1 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 350px;
+    margin: auto;
+}
+
+/* .login-container {
+  display: flex;
+  flex-direction: column;
+} */
+
+.submit {
+    border-radius: 50%;
+  background-color: #f5385d;
+}
+
+button {
+    background-color: #F5385D;
 }
