--- a/clone-app/src/index.css
+++ b/clone-app/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-input {
+input[type="text"],
+input[type="password"],
+input[type="email"] {
     @apply w-full border my-2 py-2 px-3 rounded-2xl;
 }
 
@@ -11,7 +13,7 @@ button {
 }
 
 button.primary {
-    background-color: '#F53850';
+    background-color: #F53850;
     @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
 
